# c-ffi-example

./: .gitignore  ChangeLog.md  README.md  c-ffi-example.nix  default.nix  person.cabal  person.nix
cbits/: person.c
exe/: Main.hs
include/: person.h
src/: Person.hsc
